<resources>
    <string name="app_name">CoRide</string>
    <string name="driver">Driver</string>
    <string name="rider">Rider</string>
    <string name="driverEmail">Driver Email</string>
    <string name="riderEmail">Rider Email</string>
    <string name="password">Password</string>
    <string name="login">Login Now</string>

    <string name="signUpText">Don\'t have an account? Register now!</string>
    <string name="driverSignUp">Driver Signup</string>
    <string name="riderSignUp">Rider Signup</string>

    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="licenseNumber">License Number</string>
    <string name="dob">Date Of Birth</string>

    <string name="upcomingTrips">Upcoming Trips</string>
    <string name="pastTrips">Past Trips</string>
    <string name="addTrip">Add Trip</string>
    <string name="signOut">Sign Out</string>
    <string name="driverProfile">Account</string>
    <string name="trips">Trips</string>
    <string name="createTrip">Create Trip</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="expense">Expense</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="modelName">Model Name</string>
    <string name="modelYear">Model Year</string>
    <string name="vehicleNumber">Vehicle Number</string>
    <string name="deleteCar">Delete Vehicle</string>
    <string name="cancelTrip">Cancel Trip</string>
    <string name="viewTrip">View</string>
    <string name="vehicle">Vehicle</string>
    <string name="tripDetails">Trip Details</string>
    <string name="driverDetails">Driver\'s Details</string>
    <string name="name">Name</string>
    <string name="carDetails">Car Details</string>
    <string name="carModel">Car Model</string>
    <string name="carNumber">Car Number</string>
    <string name="carYear">Car Year</string>
    <string name="riderDetails">Rider\'s Details</string>
    <string name="riderName">Rider Name</string>
    <string name="addCar">Add Car</string>
    <string name="editTrip">Edit Trip</string>
    <string name="riderProfile">Rider Profile</string>
    <string name="browseRides">Browse Rides</string>
    <string name="sendRequest">Send Request</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="admin">Admin Login</string>
    <string name="supportTitle">Title</string>
    <string name="supportMessage">Message</string>
    <string name="send">Send</string>
    <string name="issueDetails">Issue Details</string>
    <string name="response">Response</string>
    <string name="senderName">Sender</string>
    <string name="waiting">Waiting</string>
    <string name="start">Start</string>
    <string name="complete">Complete</string>
    <string name="completed">Completed</string>
    <string name="rating">Rating</string>
    <string name="star">Star</string>
    <string name="adminLogin">Admin Login</string>
    <string name="delete">Remove</string>
    <string-array name="ratings">
        <item name="one">1</item>
        <item name="two">2</item>
        <item name="three">3</item>
        <item name="four">4</item>
        <item name="five">5</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
