<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"
    tools:context=".RiderSignUpActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:padding="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                />
        </TableRow>

        <!--First Name-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <EditText
                android:id="@+id/riderFirstNameSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:background="@drawable/edit_text_design"
                android:padding="10dp"
                android:layout_weight="10"
                android:hint="@string/firstName"
                android:maxLength="50"
                />
        </TableRow>

        <!--Last Name-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <EditText
                android:id="@+id/riderLastNameSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:background="@drawable/edit_text_design"
                android:padding="10dp"
                android:layout_weight="10"
                android:hint="@string/lastName"
                android:maxLength="50"
                />
        </TableRow>

        <!--Email Address-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <EditText
                android:id="@+id/riderEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:background="@drawable/edit_text_design"
                android:padding="10dp"
                android:layout_weight="10"
                android:hint="@string/email"
                android:maxLength="50"
                />
        </TableRow>

        <!--Password-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <EditText
                android:id="@+id/riderPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:background="@drawable/edit_text_design"
                android:padding="10dp"
                android:layout_weight="10"
                android:hint="@string/password"
                android:maxLength="50"
                />
        </TableRow>
        <!--Confirm Password-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <EditText
                android:id="@+id/riderConfirmPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:background="@drawable/edit_text_design"
                android:padding="10dp"
                android:layout_weight="10"
                android:hint="@string/confirmPassword"
                android:maxLength="50"
                />
        </TableRow>
        <!--Phone Number-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <EditText
                android:id="@+id/riderPhoneSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:background="@drawable/edit_text_design"
                android:padding="10dp"
                android:layout_weight="10"
                android:hint="@string/phone"
                android:maxLength="50"
                />
        </TableRow>
        <!--Dob-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <EditText
                android:id="@+id/riderDobSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:background="@drawable/edit_text_design"
                android:padding="10dp"
                android:layout_weight="10"
                android:hint="@string/dob"
                android:maxLength="50"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <Button
                android:id="@+id/riderSignUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_design"
                android:textColor="@color/colorText"
                android:text="@string/riderSignUp"
                android:textSize="16sp"
                android:padding="10dp"
                android:elevation="10dp"
                />
        </TableRow>

    </TableLayout>

</ScrollView>