<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".DriverCreateTrip">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:padding="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <EditText
                android:id="@+id/tripSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:background="@drawable/edit_text_design"
                android:padding="10dp"
                android:layout_weight="10"
                android:hint="@string/source"
                android:maxLength="50"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <EditText
                android:id="@+id/tripDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:background="@drawable/edit_text_design"
                android:padding="10dp"
                android:layout_weight="10"
                android:hint="@string/destination"
                android:maxLength="50"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <EditText
                android:id="@+id/tripDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:background="@drawable/edit_text_design"
                android:padding="10dp"
                android:layout_weight="10"
                android:hint="@string/date"
                android:maxLength="50"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <EditText
                android:id="@+id/tripTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:background="@drawable/edit_text_design"
                android:padding="10dp"
                android:layout_weight="10"
                android:hint="@string/time"
                android:maxLength="50"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <EditText
                android:id="@+id/tripExpense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:background="@drawable/edit_text_design"
                android:padding="10dp"
                android:layout_weight="10"
                android:hint="@string/expense"
                android:maxLength="50"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="10"
            android:gravity="center_horizontal"
            >
            <Button
                android:id="@+id/tripCreateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_design"
                android:textColor="@color/colorText"
                android:text="@string/createTrip"
                android:textSize="16sp"
                android:padding="10dp"
                android:elevation="10dp"
                />
        </TableRow>
    </TableLayout>
</ScrollView>