<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:elevation="10dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/rating"
        android:textSize="16sp"
        android:gravity="left"
        android:paddingBottom="10dp"
        android:textColor="@color/colorPrimaryText"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:padding="10dp"
            >

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:padding="10dp"
            >

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:id="@+id/ratings"
                ></Spinner>

        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="right"
            >

            <Button
                android:id="@+id/dialogRatingCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:padding="10dp"
                android:background="@drawable/button_design"
                android:textColor="@color/colorText"
                android:layout_marginRight="10dp"
                />

            <Button
                android:id="@+id/dialogRatingSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:padding="10dp"
                android:background="@drawable/button_design"
                android:textColor="@color/colorText"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>